--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Mohamed171717.github.io/The-Dashboard",
+  "homepage": "https://Mohamed171717.github.io/The-Dashboard/",
   "name": "app",
   "version": "0.1.0",
   "private": true,
